# Kratos-Red

./: README.md
AMGG883/: CMakeLists.txt  argon.overlay
AMGG883/heatmap/: SQI.py  qtheatmap.py
AMGG883/lib/: argon_ble.c  argon_i2c.c
AMGG8833/src/: main.c
GridEYE_i2c/: CMakeLists.txt  argon.overlay  prj.conf
GridEYE_i2c/lib/: argon_i2c.c
GridEYE_i2c/src/: main.c
max30102/: CMakeLists.txt  README.md  prj.conf
max30102/argon/: CMakeLists.txt  README.md  argon.overlay  prj.conf
max30102/argon/.cache/clangd/index/: MAX30102.c.37CA64AE88047118.idx  MAX30102.h.F3616B321DC49802.idx  main.c.C78D7F8416AEFDE3.idx
max30102/argon/demo/MAX30102/: MAX30102_demo.cpp
max30102/argon/demo/algorithm/: algorithm_dep.cpp
max30102/argon/inc/: MAX30102.c  algorithm.c  algorithm_alt.h  heart_rate.c  heart_rate.h  rf_algo.c
max30102/argon/src/: argon_ble.c  argon_ble.h  bpm_spo2.c  bpm_spo2.h  main.c  scu_ble.c  scu_ble.h
max30102/demo/: main.cpp
max30102/dongle/: CMakeLists.txt  dtc_shell.overlay  flash.sh  prj.conf  zip.sh
max30102/dongle/inc/: ahu_ble.c  ahu_ble.h  ahu_led.c  ahu_led.h
max30102/dongle/src/: main.c
max30102/inc/: MAX30102.c  MAX30102.h  algorithm.h  algorithm_alt.c  rf_algo.h
max30102/src/: main.c
particle_argon/: prj.conf
particle_argon/heatmap/: haar.py  heatmap.py
particle_argon/lib/: argon_ble.c  argon_ble.h  argon_i2c.c  argon_i2c.h
